--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,8 @@
         </div>
         <ul class="nav navbar-nav navbar-right">
           {% if request.endpoint != None %}
+          <li><a href="/movies">Movies</a></li>
+          <li><a href="/locations">Locations</a></li>
           <li>
             <form class="navbar-form navbar-right" action="/users">
               <input
@@ -55,7 +57,6 @@
               <img src="{{ g.user.image_url }}" alt="{{ g.user.username }}" />
             </a>
           </li>
-          <li><a href="/users">Explore Users</a></li>
           <li><a href="/posts/movie_search">New Post</a></li>
           <li><a href="/logout">Log out</a></li>
           {% endif %}
