--- a/templates/home.html
+++ b/templates/home.html
@@ -1,71 +1,91 @@
-{% extends 'base.html' %}
-{% block content %}
-  <div class="row">
-
-    <aside class="col-md-4 col-lg-3 col-sm-12" id="home-aside">
-      <div class="card user-card">
-        <div>
-          <div class="image-wrapper">
-            <img src="{{ g.user.header_image_url }}" alt="" class="card-hero">
-          </div>
-          <a href="/users/{{ g.user.id }}" class="card-link">
-            <img src="{{ g.user.image_url }}"
-                 alt="Image for {{ g.user.username }}"
-                 class="card-image">
-            <p>@{{ g.user.username }}</p>
-          </a>
-          <ul class="user-stats nav nav-pills">
-            <li class="stat">
-              <p class="small">Posts</p>
-              <h4>
-                <a href="/users/{{ g.user.id }}">{{ g.user.posts | length }}</a>
-              </h4>
-            </li>
-            <li class="stat">
-              <p class="small">Likes</p>
-              <h4>
-                <a href="/users/{{ g.user.id }}/likes">{{ g.user.likes | length }}</a>  
-              </h4>
-            </li>
-          </ul>
+{% extends 'base.html' %} {% block content %}
+<div class="row">
+  <aside class="col-md-4 col-lg-3 col-sm-12" id="home-aside">
+    <div class="card user-card">
+      <div>
+        <div class="image-wrapper">
+          <img src="{{ g.user.header_image_url }}" alt="" class="card-hero" />
         </div>
+        <a href="/users/{{ g.user.id }}" class="card-link">
+          <img
+            src="{{ g.user.image_url }}"
+            alt="Image for {{ g.user.username }}"
+            class="card-image"
+          />
+          <p>@{{ g.user.username }}</p>
+        </a>
+        <ul class="user-stats nav nav-pills">
+          <li class="stat">
+            <p class="small">Posts</p>
+            <h4>
+              <a href="/users/{{ g.user.id }}">{{ g.user.posts | length }}</a>
+            </h4>
+          </li>
+          <li class="stat">
+            <p class="small">Likes</p>
+            <h4>
+              <a href="/users/{{ g.user.id }}/likes"
+                >{{ g.user.likes | length }}</a
+              >
+            </h4>
+          </li>
+        </ul>
       </div>
-    </aside>
+    </div>
+  </aside>
 
-    <div class="col-lg-6 col-md-8 col-sm-12">
-      <ul class="list-group" id="messages">
-        {% for post in posts  %}
-          <li class="list-group-item">
-            <a href="/messages/{{ post.id }}" class="message-link"></a>
-            <a href="/users/{{ post.user.id }}">
-              <img src="{{ post.user.image_url }}" alt="" class="timeline-image">
-            </a>
-            <div class="message-area">
-              <a href="/users/{{ post.user.id }}">@{{ post.user.username }}</a>
-              <span class="text-muted">{{ post.created_at.strftime('%d %B %Y') }}</span>
-              <image style='height:100px; width:100px' src='{{post.image_url}}'></image>
-              <p>{{ post.title }}</p>
-              <p>{{ post.description }}</p>
-              <p>{{ post.location_id }}</p>
-              <p>{{ post.movie_id}}</p>
-            </div>
-            {% if post.user_id != g.user.id%}
-            <form method="POST" action="/users/add_like/{{ post.id }}" id="messages-form">
-                <button type="submit" class="
+  <div class="col-lg-6 col-md-8 col-sm-12">
+    <ul class="list-group" id="messages">
+      {% for post in posts %}
+      <li class="list-group-item my-2">
+        <a href="/posts/{{ post.id }}" class="message-link"></a>
+        <a href="/users/{{ post.user.id }}">
+          <img src="{{ post.user.image_url }}" alt="" class="timeline-image" />
+        </a>
+        <div class="message-area">
+          <a href="/users/{{ post.user.id }}">@{{ post.user.username }}</a>
+          <span class="text-muted"
+            ><small>{{ post.created_at.strftime('%d %B %Y') }}</small></span
+          >
+
+          <h5>{{ post.title }}</h5>
+
+          <div>
+            <image
+              class="rounded border-0"
+              style="height: 100%; width: 100%"
+              src="{{post.image_url}}"
+            ></image>
+            <p class="my-1">
+              <span class="text-muted"><em>Movie:</em></span>
+              <span>{{ post.movie.title}}</span>
+              <span class="mx-3">
+                <span class="text-muted"><em>Location:</em></span>
+                <span>{{ post.location.city }}, {{ post.location.state }}</span>
+              </span>
+            </p>
+          </div>
+        </div>
+        {% if post.user_id != g.user.id%}
+        <form
+          method="POST"
+          action="/users/add_like/{{ post.id }}"
+          id="messages-form"
+        >
+          <button
+            type="submit"
+            class="
                 btn 
                 btn-sm 
                 {{'btn-primary' if post.id in likes else 'btn-secondary'}}"
-              >
-                <i class="fa fa-thumbs-up"></i> 
-              </button>
-            </form>
-            {% endif %} 
-          </li>
-        {% endfor %}
-
-
-      </ul>
-    </div>
-
+          >
+            <i class="fa fa-thumbs-up"></i>
+          </button>
+        </form>
+        {% endif %}
+      </li>
+      {% endfor %}
+    </ul>
   </div>
+</div>
 {% endblock %}
