--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -1,12 +1,19 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
 
-{% block content %}
+<div
+  id="warbler-hero"
+  class="full-width"
+  style="background-image: url({{user.header_image_url}});"
+></div>
 
-<div id="warbler-hero" class="full-width" style="background-image: url({{user.header_image_url}});"></div>
-
-<img src="{{ user.image_url }}" class='mx-2' alt="Image for {{ user.username }}" id="profile-avatar">
+<img
+  src="{{ user.image_url }}"
+  class="mx-2"
+  alt="Image for {{ user.username }}"
+  id="profile-avatar"
+/>
 <div class="row full-width">
-    <div class="container">
+  <div class="container">
     <div class="row justify-content-end">
       <div class="col-9">
         <ul class="user-stats nav nav-pills">
@@ -19,16 +26,31 @@
           <li class="stat">
             <p class="small">Likes</p>
             <h4>
-              <a href="/users/{{ user.id }}/likes">{{ user.likes | length }}</a>  
+              <a href="/users/{{ user.id }}/likes">{{ user.likes | length }}</a>
             </h4>
           </li>
           <div class="ml-auto">
             {% if g.user.id == user.id %}
-            <a href="/users/profile" class="btn btn-outline-secondary mx-1">Edit Profile</a>
-            <a href="/users/profile/password" class="btn btn-outline-secondary mx-1">Change Password</a>
-            <form method="POST" action="/users/delete" class="form-inline">
-              <button class="btn btn-outline-danger ml-2">Delete Profile</button>
-            </form>
+            <a href="/users/profile" class="btn btn-outline-secondary mx-1"
+              >Edit Profile</a
+            >
+            <a
+              href="/users/profile/password"
+              class="btn btn-outline-secondary mx-1"
+              >Change Password</a
+            >
+            <form
+              method="POST"
+              action="/users/delete"
+              class="delete hidden form-inline"
+            ></form>
+            <button
+              onclick="handleDelete()"
+              class="btn btn-outline-danger ml-2"
+            >
+              Delete Profile
+            </button>
+
             {% endif %}
           </div>
         </ul>
@@ -43,9 +65,15 @@
     <p>{{ user.bio }}</p>
   </div>
 
-  {% block user_details %}
-  {% endblock %}
-
+  {% block user_details %} {% endblock %}
 </div>
-
+<script>
+  function handleDelete() {
+    if (window.confirm("Are you sure you want to delete your account?")) {
+      $(".delete").submit();
+    } else {
+      return false;
+    }
+  }
+</script>
 {% endblock %}
