--- a/templates/posts/movie_search.html
+++ b/templates/posts/movie_search.html
@@ -1,21 +1,26 @@
 {% extends 'base.html' %}
+
+<!-- Header section with movie search bar -->
+{% block topcontent %}
+<section class="jumbotron text-center py-5 bg-light" style="background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url('/static/images/movies-background.jpeg'); background-size:60%;">
+  <div class="container">
+    <h1 class="jumbotron-heading text-light">SEARCH MOVIES</h1>
+    <p class="lead text-light">Look up Movies to see Movie Locations!</p>
+    <p>
+      <form id='movie-search-form' method="POST">
+        <input id='movie-name' type="text"> </input>
+        <button type="Submit" class="btn btn-primary my-2 mx-2">Search</button>
+      </form>
+    </p>
+  </div>
+</section>
+{% endblock %}
+
+
+<!-- Bottom part where movies are generated -->
 {% block content %}
 
-  <div class="row justify-content-center">
-    <div class="col-md-12">
-      
-      <form id='movie-search-form' method="POST">
-
-        <input id='movie-name' type="text"> </input>
-
-        <button type="Submit" class="btn btn-outline-success btn-block">Search</button>
-        
-        </form>
-
-    </div>
-  </div>
-
-  <div id='movie-list' class="row card-deck">
+  <div id='movie-list' class="row card-deck my-3">
   </div>
 
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
