--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -1,22 +1,27 @@
 {% extends 'base.html' %} {% block content %}
 
-<div
-  id="warbler-hero"
-  class="full-width"
-  style="background-image: url({{user.header_image_url}});"
-></div>
+<div id="warbler-hero" class="full-width"></div>
 
-<img
+<!-- <img
   src="{{ user.image_url }}"
   class="mx-2"
   alt="Image for {{ user.username }}"
   id="profile-avatar"
-/>
+/> -->
+
 <div class="row full-width">
   <div class="container">
     <div class="row justify-content-end">
       <div class="col-9">
         <ul class="user-stats nav nav-pills">
+          <li class="stat">
+            <img
+              src="{{ user.image_url }}"
+              class="mx-2"
+              alt="Image for {{ user.username }}"
+              id="profile-avatar"
+            />
+          </li>
           <li class="stat">
             <p class="small">Posts</p>
             <h4>
@@ -29,16 +34,21 @@
               <a href="/users/{{ user.id }}/likes">{{ user.likes | length }}</a>
             </h4>
           </li>
-          <div class="ml-auto">
-            {% if g.user.id == user.id %}
+
+          {% if g.user.id == user.id %}
+          <li class="stat">
             <a href="/users/profile" class="btn btn-outline-secondary mx-1"
               >Edit Profile</a
             >
+          </li>
+          <li class="stat">
             <a
               href="/users/profile/password"
               class="btn btn-outline-secondary mx-1"
               >Change Password</a
             >
+          </li>
+          <li class="stat">
             <form
               method="POST"
               action="/users/delete"
@@ -50,9 +60,8 @@
             >
               Delete Profile
             </button>
-
-            {% endif %}
-          </div>
+          </li>
+          {% endif %}
         </ul>
       </div>
     </div>
@@ -61,7 +70,7 @@
 
 <div class="row">
   <div class="col-sm-3">
-    <h4 id="sidebar-username">@{{ user.username }}</h4>
+    <h4 id="sidebar-username">{{ user.username }}</h4>
     <p>{{ user.bio }}</p>
   </div>
 
