--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,23 @@
     <script src="https://unpkg.com/popper"></script>
     <script src="https://unpkg.com/bootstrap"></script>
 
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
@@ -35,19 +52,7 @@
           {% if request.endpoint != None %}
           <li><a href="/movies">Movies</a></li>
           <li><a href="/locations">Locations</a></li>
-          <li>
-            <form class="navbar-form navbar-right" action="/users">
-              <input
-                name="q"
-                class="form-control"
-                placeholder="Search Movie/Location"
-                id="search"
-              />
-              <button class="btn btn-default">
-                <span class="fa fa-search"></span>
-              </button>
-            </form>
-          </li>
+
           {% endif %} {% if not g.user %}
           <li><a href="/signup">Sign up</a></li>
           <li><a href="/login">Log in</a></li>
@@ -64,6 +69,8 @@
       </div>
     </nav>
     {% block fourzerofour %} {% endblock %}
+    <div class="top-content">{% block topcontent %} {% endblock %}</div>
+
     <div class="container">
       {% for category, message in get_flashed_messages(with_categories=True) %}
       <div class="alert alert-{{ category }}">{{ message }}</div>
