--- a/templates/posts/new.html
+++ b/templates/posts/new.html
@@ -5,12 +5,58 @@
   href="/static/stylesheets/geolocation.css"
 />
 <script type="module" src="/static/geolocation.js"></script>
+
+{% endblock %} {% block topcontent %}
+<!-- Top part where movie picture and information are stored -->
+<div
+  class="jumbotron jumbotron-fluid p-5"
+  style="
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)),
+      url('https://image.tmdb.org/t/p/w500{{movie.poster_path}}');
+    background-position: center; background-repeat: no-repeat;
+    background-color: #343a40;
+  "
+>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col">
+        <img
+          style="max-width: 300px"
+          src="https://image.tmdb.org/t/p/w500{{movie.poster_path}}"
+          alt="Card image cap"
+        />
+      </div>
+
+      <div class="col align-self-end">
+        <h2
+          class="text-light bg-dark p-3"
+          style="position: absolute; left: 0; right: 0"
+        >
+          Post a location for: <strong>{{movie.title}}</strong>
+        </h2>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %} {% block content %}
 
-<div class="row justify-content-center">
+<div class="row justify-content-center my-5">
   <div class="col-md-6">
+    <!-- Google Maps API -->
+    <h1>Movie Location</h1>
+
+    <div id="map" style="height: 750px"></div>
+
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCp1jKqmi89h2mhNsKtSZYK3-IT3xEq8go&callback=initMap&v=weekly"
+      defer
+    ></script>
+    <br />
+    <p>
+      <span>Address: </span
+      ><span id="full-address-span">-Enter a location on the map-</span>
+    </p>
     <form method="POST">
-      <h1>{{movie.title}}</h1>
       {{ form.hidden_tag() }} {% for field in form if field.widget.input_type !=
       'hidden' %}
 
@@ -28,19 +74,5 @@
     </form>
   </div>
 </div>
-
-<h1>Map</h1>
-
-<div id="map" style="height: 1000px; width: 1000px"></div>
-<!-- 
-   The `defer` attribute causes the callback to execute after the full HTML
-   document has been parsed. For non-blocking uses, avoiding race conditions,
-   and consistent behavior across browsers, consider loading using Promises
-   with https://www.npmjs.com/package/@googlemaps/js-api-loader.
-  -->
-<script
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCp1jKqmi89h2mhNsKtSZYK3-IT3xEq8go&callback=initMap&v=weekly"
-  defer
-></script>
 
 {% endblock %}
